Fix mis-aligned sort icon in IE11
Replace absolute positioning with float.

Re-order the HTML so the icon comes first inside the `<th>`, otherwise
the mis-alignment got worse in Firefox.

Remove the IE11 @media query from the CSS.

Update the release notes.

--- a/src/components/table/table-header/table-header.scss
+++ b/src/components/table/table-header/table-header.scss
@@ -67,22 +67,12 @@
 }
 
 .carbon-table-header__icon {
-  margin: -5px 10px 0;
-  position: absolute;
-  right: 0;
-  top: 50%;
+  float: right;
 
   .carbon-icon__svg--sort-down,
   .carbon-icon__svg--sort-up {
     height: 11px;
     width: 10px;
-  }
-}
-
-// Fix for IE11 mis-aligned icon
-@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
-  .carbon-table-header__icon {
-    margin-top: 3px;
   }
 }
 
